# CudaPoc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TROUBLESHOOT.md  add_cuda.cu  add_cuda.h  cmake_config.cmake  cuda_utils.h  main.cpp  vcpkg-configuration.json  vcpkg.json
CudaPoc/: CMakeLists.txt
CudaPoc/src/: add_cuda.cu  add_cuda.cuh  add_one_cuda.cu  add_one_cuda.cuh  cuda_utils.h  depth_cuda.cu  depth_cuda.cuh  device_cuda.cu  device_cuda.cuh  gemm_cuda.cu  gemm_cuda.cuh  mul_cuda.cu  mul_cuda.cuh  multiply_by_cuda.cu  multiply_by_cuda.cuh  pipeline_cuda.cu  pipeline_cuda.cuh  sample_graph_cuda.cu  sample_graph_cuda.cuh  sin_cuda.cu  sin_cuda.cuh  sqrt_cuda.cu  sqrt_cuda.cuh  subtract_by_cuda.cu  subtract_by_cuda.cuh  sum_cuda.cu  sum_cuda.cuh  transpose_cuda.cu  transpose_cuda.cuh
example/: CMakeLists.txt  add_example.cc  nccl_example.cc  nccl_mpi_example.cu
ports/nvidia-cutlass/: portfile.cmake  vcpkg.json
scripts/: build_project.py  format_code.py  run_all_test.py  run_nccl_mpi.sh  run_nccl_mpi_with_mps.sh  run_nccl_mpi_with_mps_sudo.sh
src/: add_cuda.cu  add_cuda.h  cuda_utils.h  main.cpp
test/: CMakeLists.txt  test_day01.cc  test_day05cu.cc
test/day01/: compare_gemm.cc  compare_in_dims.cc  compare_in_types.cc  hello_cuda.cc  matrix_transpose.cc  pipeline_staging.cc  sum_reduction.cc  test_depth.cc  test_graph.cc
test/day05cu/: device.cu  stream.cu  swizzling.cu
triplets/: x64-linux-cudapoc.cmake  x64-windows-cudapoc.cmake
